--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Renttire"
         tools:targetApi="31">
         <activity
+            android:name=".loadingActivity"
+            android:exported="false" />
+        <activity
             android:name=".SignUpActivity"
             android:exported="true">
             <intent-filter>
@@ -22,11 +25,10 @@
         </activity>
         <activity
             android:name=".LoginActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
-
+            android:exported="false" />
     </application>
 
 </manifest>
